--- a/soundflow/package.json
+++ b/soundflow/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "stripe": "^14.9.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
